--- a/public/css/bootstrap2.css
+++ b/public/css/bootstrap2.css
@@ -643,7 +643,7 @@ select[multiple].input-group-sm>.form-control,select[multiple].input-group-sm>.i
 .nav>li>a>img{max-width:none;}
 .nav-tabs{border-bottom:1px solid #ddd;}
 .nav-tabs>li{float:left;margin-bottom:-1px;}
-.nav-tabs>li>a{margin-right:2px;border:1px solid transparent;border-radius:4px 4px 0 0;line-height:1.42857143;}
+.nav-tabs>li>a{margin-right:2px;border:1px solid transparent;border-radius:4px 4px 0 0;line-height:1.42857143;color:#444;}
 .nav-tabs>li>a:hover{border-color:#eee #eee #ddd;}
 .nav-tabs>li.active>a,.nav-tabs>li.active>a:hover{border:1px solid #ddd;background-color:#fff;color:#555;cursor:default;border-bottom-color:transparent;}
 .nav-tabs.nav-justified{width:100%;border-bottom:0;}
